# simd_needle

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: bench_cli.sh  bench_search.rs  bmh.rs  kmp.rs  memchr.rs  memchr_libc.rs  naive.rs  simd.rs  simd_mmap_finder.rs  simd_x86_64.rs
proptest-regressions/: tests.txt
src/: finder.rs  hex.rs  lib.rs  main.rs  memchr_haystacks.rs  memchr_libc_haystacks.rs  mmap_finder.rs  simd_haystacks.rs  simd_mmap_finder_haystacks.rs  simdx86_64_haystacks.rs  tests.rs
src/search/: bmh.rs  kmp.rs  mod.rs  naive.rs  simd.rs  simdx86_64.rs
